<resources>
    <string name="app_name">Cifrado Cesar</string>
    <string name="home">Principal</string>
    <string name="restaurants">Restaurantes</string>
    <string name="details">Detalles</string>
    <string name="surprise">Sorpresa</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="button_text">Iniciar Sesion</string>
    <string name="sign_up"><u>Regístrate</u></string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="rep_password">Repetir Contraseña</string>
    <string name="register">Registrar</string>
    <string name="lastName">Apellido</string>

    <string name="explanation_home">En este fragment será la página principal, aqui se mostrarán
    elementos como noticias, promociones de restaurantes o los restaurantes más valorados por semana
    , será un espacio para que haya información general de restaurantes.</string>
    <string name="explanation_restaurants">En este fragment se mostrará la lista de restaurantes,
        donde se mostrará la información básica de ellos, como el nombre, la foto, la etiqueta de tipo
        de restaurante, y la calificacion general, además se podrá ingresar individualmente a cada uno
    por medio de un click, para poder evaluar o ver las evaluaciones del restaurante.</string>
    <string name="explanation_surprise">En este fragment se mostrarán recomendaciones de restaurantes
        diarios, tomandose al azar pero tomando en cuenta un promedio de valoracion decente para
        ser mostrado a los usuarios. Pueden mostrarse de 1 a 3 restaurantes diarios.</string>
    <string name="restaurant_title">Nombre del Restaurante</string>
    <string name="location_label">"Ubicación: "</string>
    <string name="location_example">Laureles</string>
    <string name="rating_label">4.8</string>
    <string name="menu_label">Menú</string>
    <string name="opinions">Opiniones</string>
    <string name="create_opinion">Comenta tu experiencia</string>
    <string name="write_opinion_title">Escribe tu Mensaje</string>
    <string name="publicate">Publicar</string>
    <string name="emptyOpinion">Escribe un mensaje</string>
    <string name="emptyStars">Ingrese una clave válida</string>
    <string name="successOpinion">Su mensaje ha sido publicado</string>
    <string name="write_here">¡Escribe aquí!</string>
    <string name="moreThan6Chars">Escribe más de 6 caracteres</string>
    <string name="home_title">Opiniones</string>
    <string name="surprise_title">Nuestra Recomendación</string>
    <string name="code_message_title">Mensaje Codificado</string>
    <string name="key_title">Inserte la clave</string>
    <string name="key_error">Inserte la clave.</string>
    <string name="message_title">Mensaje</string>
    <string name="decode">Decodificar</string>
    <string name="messages_home_title">Mensajes</string>
    <string name="create_message">Escribir Mensaje</string>
    <string name="write_key">Pon tu clave</string>
    <string name="positiveKey">Ingrese una clave positiva</string>
</resources>