<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.colosoft.recomiendame.ui.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_navigation_splash_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.colosoft.recomiendame.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="com.colosoft.recomiendame.ui.restaurants.RestaurantsFragment"
        android:label="@string/restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_surprise"
        android:name="com.colosoft.recomiendame.ui.surprise.SurpriseFragment"
        android:label="@string/surprise"
        tools:layout="@layout/fragment_surprise" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.colosoft.recomiendame.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_signup"
            app:destination="@id/navigation_signup" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.colosoft.recomiendame.ui.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_signup_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
</navigation>